# whisper-audio-captioning-service

./: .dockerignore  .gitignore  Dockerfile  README.md  pyproject.toml
models/: README.md
src/audiocap/: __init__.py  audio_caption_generator.py  config.py  main.py  predict.py
src/audiocap/config/: predict.py
src/whisper_audio_captioning_service/: __init__.py
