[project]
name = "whisper-audio-captioning-service"
version = "0.1.0"
description = ""
readme = "README.md"
authors = [
    { name = "Julian Hoever", email = "julianhoever@posteo.de" }
]
requires-python = ">=3.8,<3.9"
dependencies = [
    "audiomentations==0.29.0",
    "av==10.0.0",
    "datasets==2.11.0",
    "evaluate==0.4.0",
    "h5py==3.7.0",
    "ipywidgets==8.0.4",
    "librosa==0.9.2",
    "lovely-tensors==0.1.14",
    "matplotlib==3.7.1",
    "notebook==6.5.3",
    "numpy==1.23.3",
    "pandas==1.5.2",
    "peft==0.3.0",
    "plotly==5.14.1",
    "pytorch-lightning==1.9.4",
    "pyyaml==6.0.1",
    "rich==13.3.2",
    "rouge-score==0.1.2",
    "sacrebleu==2.3.1",
    "scikit-image==0.20.0",
    "scikit-learn==1.1.3",
    "torch==2.0.0",
    "torchaudio==2.0.1",
    "torchdata==0.6.0",
    "torchvision==0.15.1",
    "tqdm==4.64.1",
    "transformers==4.27.1",
    "typer==0.7.0",
    "wandb==0.14.0",
    "wordcloud==1.8.2.2",
    "yt-dlp==2023.3.4",
]


[tool.hatch.build.targets.wheel]
packages = ["src/audiocap", "src/audiocap_service"]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[dependency-groups]
dev = [
    "ruff>=0.12.11",
]
