[project]
name = "whisper-audio-captioning-service"
version = "0.1.0"
description = ""
readme = "README.md"
authors = [{ name = "Julian Hoever", email = "julianhoever@posteo.de" }]
requires-python = ">=3.8,<3.9"
dependencies = [
    "audiomentations==0.29.0",
    "av==10.0.0",
    "datasets==2.11.0",
    "evaluate==0.4.0",
    "fastapi>=0.110.3",
    "librosa==0.9.2",
    "lovely-tensors==0.1.14",
    "numpy==1.23.3",
    "pandas==1.5.2",
    "peft==0.3.0",
    "python-multipart>=0.0.20",
    "pyyaml==6.0.1",
    "rich==13.3.2",
    "rouge-score==0.1.2",
    "sacrebleu==2.3.1",
    "setuptools>=75.3.2",
    "torch==2.0.0",
    "torchaudio==2.0.1",
    "torchdata==0.6.0",
    "transformers==4.27.1",
    "typer==0.7.0",
    "uvicorn>=0.33.0",
]


[tool.hatch.build.targets.wheel]
packages = ["src/audiocap", "src/audiocap_service"]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[dependency-groups]
dev = ["ruff>=0.12.11"]
